fix billboard image bleed

--- a/client/stylesheets/components/_billboard.scss
+++ b/client/stylesheets/components/_billboard.scss
@@ -3,6 +3,7 @@
   margin-top: - $topbar-height;
 }
 .billboard__image {
-  width: 100%;
+  width: calc(100% + #{r(1) * 2});
+  max-width: none;
   margin: n() r(-1);
 }
